メッセージウィンドウ作成

--- a/Assets/_Projects/Scripts/Scripts.asmdef
+++ b/Assets/_Projects/Scripts/Scripts.asmdef
@@ -14,7 +14,9 @@
         "GUID:d5f66034c3e821044ba27a9a20ae2a24",
         "GUID:88be65f96b86746888c927a5c8ff3534",
         "GUID:5fd453cd0d182422093c4a764fd5eadb",
-        "GUID:72b806b1f0c4e407da84762c44875a7d"
+        "GUID:72b806b1f0c4e407da84762c44875a7d",
+        "GUID:08b38f39e2d9e594389b7a4cf4c2c338",
+        "GUID:4f682e06dbb3e624faedad9cc27106cc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
