--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "u1w202508.sln"
+    "dotnet.defaultSolution": "BBSim.sln"
 }
