一旦開発を離れたのでコミット

--- a/Assets/_Projects/Scripts/Vcontainer/BBSim.Vcontainer.asmdef
+++ b/Assets/_Projects/Scripts/Vcontainer/BBSim.Vcontainer.asmdef
@@ -16,11 +16,13 @@
         "Common.Features",
         "Common.UIs",
         "Common.Vcontainer",
+        "Common.Events",
         "BBSim.Models",
         "BBSim.Settings",
         "BBSim.Features",
         "BBSim.SOs",
-        "BBSim.UIs"
+        "BBSim.UIs",
+        "BBSim.Events"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
