--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,13 +14,13 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.addressables": "2.7.4",
     "com.unity.ai.navigation": "2.0.9",
-    "com.unity.collab-proxy": "2.9.3",
+    "com.unity.collab-proxy": "2.10.2",
     "com.unity.ide.cursor": "https://github.com/boxqkrtm/com.unity.ide.cursor.git",
-    "com.unity.ide.visualstudio": "2.0.23",
-    "com.unity.inputsystem": "1.14.2",
-    "com.unity.multiplayer.center": "1.0.0",
-    "com.unity.render-pipelines.universal": "17.2.0",
-    "com.unity.services.leaderboards": "2.2.1",
+    "com.unity.ide.visualstudio": "2.0.25",
+    "com.unity.inputsystem": "1.16.0",
+    "com.unity.multiplayer.center": "1.0.1",
+    "com.unity.render-pipelines.universal": "17.3.0",
+    "com.unity.services.leaderboards": "2.3.3",
     "com.unity.test-framework": "1.6.0",
     "com.unity.timeline": "1.8.9",
     "com.unity.toonshader": "0.11.0-preview",
@@ -29,6 +29,7 @@
     "jp.co.cyberagent.smartaddresser": "https://github.com/CyberAgentGameEntertainment/SmartAddresser.git?path=/Assets/SmartAddresser",
     "jp.hadashikick.vcontainer": "https://github.com/hadashiA/VContainer.git?path=VContainer/Assets/VContainer#1.16.8",
     "com.unity.modules.accessibility": "1.0.0",
+    "com.unity.modules.adaptiveperformance": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -55,6 +56,7 @@
     "com.unity.modules.unitywebrequestaudio": "1.0.0",
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
+    "com.unity.modules.vectorgraphics": "1.0.0",
     "com.unity.modules.vehicles": "1.0.0",
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
