新ゲーム「もうひとつ、沈める？」のプロジェクトセットアップ完了
- WaterTankフォルダ構造作成（Coin/Water/Tank/Shop）
- コアスクリプト4つ作成（CoinType、WaterExpansion、TankOverflowDetector、CoinDefinition）
- VContainer設定を新ゲーム用に簡素化

--- a/Assets/_Projects/Scripts/SOs/App.SOs.asmdef
+++ b/Assets/_Projects/Scripts/SOs/App.SOs.asmdef
@@ -2,7 +2,7 @@
     "name": "App.SOs",
     "rootNamespace": "App.SOs",
     "references": [
-        "BBSim.Models"
+        "Alchemy"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
