親オブジェクト（Water）も膨張するように修正
WaterExpansion.csを修正し、親のWaterオブジェクトのスケールを変更。
見た目のCubeとColliderが一緒に膨張するようになった。
2回目以降のコイン接触も正しく検知される。

--- a/Assets/_Projects/Scripts/Features/App.Features.asmdef
+++ b/Assets/_Projects/Scripts/Features/App.Features.asmdef
@@ -4,6 +4,7 @@
     "references": [
         "BBSim.Models",
         "BBSim.SOs",
+        "App.SOs",
         "Alchemy",
         "LitMotion",
         "Unity.TextMeshPro",
