feat: フォールド（利確）システムの実装
- 基準線表示システム（BaselineDisplay）
- 水位判定システム（WaterLevelChecker、複数Water対応）
- フォールド処理システム（FoldUseCase）
- 含み益ポイント表示機能
- GameStateEntityにフォールド回数と膨張回数を追加
- VContainer統合とPrefab対応設計

--- a/Assets/_Projects/Scripts/Features/App.Features.asmdef
+++ b/Assets/_Projects/Scripts/Features/App.Features.asmdef
@@ -2,14 +2,12 @@
     "name": "App.Features",
     "rootNamespace": "App.Features",
     "references": [
-        "BBSim.Models",
-        "BBSim.SOs",
         "App.SOs",
         "Alchemy",
         "LitMotion",
         "Unity.TextMeshPro",
         "LitMotion.Extensions",
-        "Scripts.SaveJson"
+        "App.Settings"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
