feat: ゲームオーバーシステムとタイトル画面の実装、UI英語化
- ゲームオーバーシステム（MessagePipe、GameOverUseCase、GameOverView）
- タイトル画面（TitleView、TitlePresenter）
- UI要素の英語化（コインボタン、ポイント確定、オプション、基準線）
- コインボタンを1つに削減して中央配置
- 基準線ラベルにポイント倍率を表示
- リトライ後のボタン再有効化
- CoinDefinition.InitializeForDebugのコンパイルエラー修正

--- a/Assets/_Projects/Scripts/Events/App.Events.asmdef
+++ b/Assets/_Projects/Scripts/Events/App.Events.asmdef
@@ -2,19 +2,13 @@
     "name": "App.Events",
     "rootNamespace": "App.Events",
     "references": [],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": true,
-    "precompiledReferences": [
-        "nunit.framework.dll"
-    ],
-    "autoReferenced": false,
-    "defineConstraints": [
-        "UNITY_INCLUDE_TESTS"
-    ],
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
 }
